# oleg-telegram-leads

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.py  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  reset_and_rebuild.sh  test_ai_direct.py  test_ai_real.py  tg-auth.py  tg-connect.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enrichment_jobs.py  0002_nlp_config_revisions.py  0003_analytics.py  0004_analytics_filter_indexes.py  0005_analytics_review_lanes.py  0006_notification_settings.py  0007_telegram_ingestion_and_notification_outbox.py  0008_runtime_analytics_cleanup.py  0009_runtime_log_indexes.py  0010_pretty_notifications.py  0011_analytics_source_fields.py  0012_userbot_cooldown.py  0013_message_reviews.py  0014_message_reviews_source_fk.py  0015_notification_outbox_idempotency.py  0016_message_review_tags.py  0017_enrichment_task_outbox.py  0018_lead_scoring_caps.py  0019_operator_noise_score_cap.py  0020_camera_signal_scoring.py  0021_signal_fact_dependencies.py  0022_ir_signal_disambiguation.py  0023_domain_without_intent_config_guard.py  0024_config_guard_tuning.py  0025_domain_cap_intent_only.py  0026_config_v3_taxonomy.py  0027_golden_examples.py  0028_video_kit_selection_intent.py  0029_video_kit_help_intent.py  0030_enrich_config_rev.py  0031_text_owner_config_repair.py  0032_alias_fact_duplicate_repair.py  0033_llm_verifications.py  0034_llm_settings_and_queue_columns.py  0035_lead_handling_bot.py  0036_notification_summary_runs.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  enrichments.py  golden_examples.py  health.py  llm_settings.py  llm_verifications.py  notifications.py  project_docs.py  runtime.py  settings.py  telegram_ingestion.py
backend/app/application/: review_lanes.py
backend/app/application/enrichment/: __init__.py  (+2 more)
backend/app/cli/: __init__.py  batch_enrich.py  enrichment_task_dispatcher.py  eval_reviews.py  import_analytics.py  notification_dispatcher.py  notification_summary_worker.py  telegram_bot_worker.py  telegram_userbot_worker.py
backend/app/core/: auth.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/domain/: analytics.py  enrichment.py  golden_examples.py  lead_handling.py  llm_settings.py  llm_verification.py  notifications.py  settings.py  telegram_ingestion.py
backend/app/worker/: celery_app.py  tasks.py
backend/config/nlp/: devices.yaml  facts.yaml  lead_scoring.yaml  pipeline.yaml  protocols.yaml  signals.yaml  software.yaml  vendors.yaml
backend/tests/: conftest.py  test_analytics_api.py  test_analytics_review_lanes.py  test_auth_api.py  test_batch_enrich_cli.py  test_enrichment_api.py  test_enrichment_config.py  test_enrichment_pipeline.py  test_enrichment_use_cases.py  test_eval_reviews_cli.py  test_golden_examples_api.py  test_health.py  test_interactive_notification_outbox.py  test_lead_handling_repository.py  test_lead_handling_use_cases.py  test_lead_scorer.py  test_llm_routing.py  test_llm_settings_api.py  test_llm_verification_context.py  test_llm_verification_use_cases.py  test_llm_verifications_api.py  test_nlp_config_repository.py  test_notification_outbox.py  test_notification_routing.py  test_notification_settings_api.py  test_notification_summary.py  test_notification_summary_repository.py  test_notification_summary_worker.py  test_ollama_llm_client.py  test_project_docs_api.py  test_runtime_api.py  test_settings_api.py  test_telegram_bot_worker.py  test_telegram_ingestion_api.py  test_telegram_ingestion_use_cases.py  test_telegram_live_sources.py  test_telegram_sender.py  test_telegram_userbot_worker_cli.py  test_text_owner_config_repair_migration.py  test_worker_notifications.py
(+457 files in other folders)
