[project]
name = "pur-leads"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
pur-leads = "pur_leads.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pur_leads"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
