[project]
name = "pur-leads"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "chromadb>=0.5,<2",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pypdf>=6.3",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "telethon>=1.43,<2",
    "uvicorn>=0.34",
    "pyarrow>=15",
    "pymorphy3>=2.0",
    "spacy>=3.7,<4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]
embeddings = [
    "torch>=2.3",
    "transformers>=4.41,<5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project.scripts]
pur-leads = "pur_leads.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pur_leads"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
