[project]
name = "pur-leads-v2-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "celery>=5.6.3",
    "fastapi>=0.115,<1",
    "natasha>=1.6.0",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "setuptools<81",
    "sqlalchemy[asyncio]>=2.0,<3",
    "sse-starlette>=3.4.2",
    "uvicorn[standard]>=0.34,<1",
    "yargy>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["celery", "natasha", "yargy", "yargy.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]
